--- a/src/lib/display/avatar/style.css
+++ b/src/lib/display/avatar/style.css
@@ -32,7 +32,8 @@
 }
 
 .WuiAvatarGroup .WuiAvatar+.WuiAvatar {
-  outline: 1px solid var(--color-surface) !important;
+  /* White box shadow */
+  box-shadow: 0 0 0 1px var(--color-surface) !important;
 }
 
 .WuiAvatarGroup>*:not(:first-child) {
