--- a/src/lib/inputs/label/style.css
+++ b/src/lib/inputs/label/style.css
@@ -1,7 +1,7 @@
 .WuiInput__label__root {
   width: 100% !important;
-  max-width: calc(100% - (2 * var(--space-nm)));
-  margin-left: var(--space-nm);
+  max-width: calc(100% - (2 * var(--space-md)));
+  margin-left: var(--space-md);
 }
 
 .WuiInput__label {
