--- a/src/lib/inputs/radio/style.css
+++ b/src/lib/inputs/radio/style.css
@@ -21,7 +21,7 @@
 .WuiRadio__thumb {
   cursor: pointer;
   display: block;
-  height: var(--WuiRadio-size);
+  height: var(--WuiRadio-size) !important;
   width: var(--WuiRadio-size);
   padding: 2px;
 }
@@ -31,7 +31,7 @@
 }
 
 .WuiRadio:hover input:not(:checked)+.WuiRadio__thumb {
-  border-width: 2px;
+  box-shadow: inset 0 0 0 0.7px var(--WuiColor-bg);
 }
 
 .WuiRadio__thumb::after {
