--- a/src/lib/utils/likebutton/style.css
+++ b/src/lib/utils/likebutton/style.css
@@ -5,10 +5,39 @@
   flex-direction: row;
   flex-wrap: nowrap;
   flex-shrink: 0;
+  height: var(--WuiLikeButton-height, var(--height-md));
   overflow: hidden;
   text-decoration: none;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.WuiLikeButton--ss {
+  --WuiLikeButton-height: var(--height-ss);
+}
+
+.WuiLikeButton--xs {
+  --WuiLikeButton-height: var(--height-xs);
+}
+
+.WuiLikeButton--sm {
+  --WuiLikeButton-height: var(--height-sm);
+}
+
+.WuiLikeButton--md {
+  --WuiLikeButton-height: var(--height-md);
+}
+
+.WuiLikeButton--lg {
+  --WuiLikeButton-height: var(--height-lg);
+}
+
+.WuiLikeButton--xl {
+  --WuiLikeButton-height: var(--height-xl);
+}
+
+.WuiLikeButton--xx {
+  --WuiLikeButton-height: var(--height-xx);
 }
 
 .WuiLikeButton--only-icon {
