--- a/src/lib/feedback/snackbar/style.css
+++ b/src/lib/feedback/snackbar/style.css
@@ -1,59 +1,57 @@
 /* prettier-ignore */
 .WuiSnackbar {
-  --WuiSnackbar-minWidth: 400px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  left: 50%;
-  max-width: 500px;
-  max-height: 500px;
-  min-width: 50px;
+  max-width: 350px;
   min-height: 50px;
   position: fixed;
-  width: auto !important;
+  z-index: 9999;
 }
 
 .WuiSnackbar--top {
-  top: var(--space-nm);
+  top: var(--space-md);
   transform: translate(-50%, 0);
 }
 
 .WuiSnackbar--top-right {
-  top: var(--space-nm);
-  right: var(--space-nm);
+  top: var(--space-md);
+  right: var(--space-md);
   transform: translate(0, 0);
 }
 
 .WuiSnackbar--top-left {
-  top: var(--space-nm);
-  left: var(--space-nm);
+  top: var(--space-md);
+  left: var(--space-md);
   transform: translate(0, 0);
 }
 
 .WuiSnackbar--left {
-  left: var(--space-nm);
+  top: 50%;
+  left: var(--space-md);
   transform: translate(0, -50%);
 }
 
 .WuiSnackbar--right {
-  right: var(--space-nm);
+  top: 50%;
+  right: var(--space-md);
   transform: translate(0, -50%);
 }
 
 .WuiSnackbar--bottom {
-  bottom: var(--space-nm);
+  bottom: var(--space-md);
   transform: translate(-50%, 0);
 }
 
 .WuiSnackbar--bottom-right {
-  bottom: var(--space-nm);
-  right: var(--space-nm);
+  bottom: var(--space-md);
+  right: var(--space-md);
   transform: translate(0, 0);
 }
 
 .WuiSnackbar--bottom-left {
-  bottom: var(--space-nm);
-  left: var(--space-nm);
+  bottom: var(--space-md);
+  left: var(--space-md);
   transform: translate(0, 0);
 }
 
@@ -70,6 +68,5 @@
 }
 
 .WuiSnackbar__body {
-  padding: var(--space-nm);
   width: 100%;
 }
